src/assets/main.css
@import 'tailwindcss';
@plugin 'daisyui' {
  themes:
    dark --prefersdark,
    winter --default;
}

:root:has(:is(.modal-open, .modal:target, .modal-toggle:checked + .modal, .modal[open])) {
  scrollbar-gutter: auto;
}

@custom-variant dark (&:where([data-theme="dark"], [data-theme="dark"] *));

